--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "deps/node-localStorage"]
 	path = deps/node-localStorage
 	url = https://github.com/coolaj86/node-localStorage.git
+[submodule "deps/underscore"]
+	path = deps/underscore
+	url = git://github.com/documentcloud/underscore.git
